compiler/testData/diagnostics/tests/sealed/LocalSealed.kt
fun foo() {
    <!DEPRECATED_MODIFIER_FOR_TARGET!>sealed<!> class My
}
